--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   "prettier.eslintIntegration": true,
   "editor.formatOnSave": false,
   "editor.tabSize": 2,
+  "editor.detectIndentation": false,
   "[html]": {
     "editor.defaultFormatter": "vscode.html-language-features"
   }
